--- a/calculator.html
+++ b/calculator.html
@@ -20,13 +20,13 @@
                 </tr>
                 <tr>
                     <td>
-                        <div id= "c">
+                        <div id= "c" class="button orange">
                             100
                         </div>
                     </td>
                     
                     <td>
-                        <div id= "plusnegative">
+                        <div id= "plusnegative" class="button orange">
                             100
                         </div>
                     </td>
