css and html complete

--- a/calculator.html
+++ b/calculator.html
@@ -26,7 +26,7 @@
                     </td>
                     
                     <td>
-                        <div id= "plusnegative" class="button gray">
+                        <div id= "plusnegative" class="button gray" style="padding: left -20px;">
                             +/-
                         </div>
                     </td>
@@ -118,12 +118,11 @@
                     </td>
                 </tr>
                 <tr>
-                    <td colspan="2" style="padding-left: 3px">
-                        <div id= "zero">
-                            <div style="position: absolute; margin-left: 45px; padding-top: 15px; padding-left: px; z-index: 5; width: 160px; height: 70px;">0</div>
-                            <div class="circle darkgray" style="margin-top: 5px; margin-left: 10px"></div>
-                            <div class="button0 darkgray" style="margin-top: -84px; margin-left: 65px"></div>
-                            <div class="circle darkgray" style="margin-top: -84px;margin-left: 102px;" ></div>
+                    <td colspan="2">
+                        <div id= "zero" class="button0 darkgray">
+                            <div style="position:absolute; padding-top: 9px; padding-left: 35px">
+                                0
+                            </div>   
                         </div>
                     </td>
                           
